--- a/index.html
+++ b/index.html
@@ -15,19 +15,18 @@
 <body>
     <!-- верхня лінія -->
     <header>
-        <div class="container">
-            <nav>
+        <div class="container header-nav">
+            <nav class="main-nav">
                 <a class="logo" href="./index.html">Web<span class="partlogo">Studio</span></a>
-            
                 <ul class="site-nav list">
-                    <li><a href="./index.html" class="link current">Студія</a></li>
-                    <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-                    <li><a href="" class="link">Контакти</a></li>
+                    <li class="item"><a href="./index.html" class="link current">Студія</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
+                    <li class="item"><a href="" class="link">Контакти</a></li>
                 </ul>
             </nav>
             <ul class="contact-nav list">
-                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="link">+380961111111</a></li>
+                <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li class="item"><a href="tel:+380961111111" class="link">+380961111111</a></li>
             </ul>
         </div>
     </header>
@@ -42,21 +41,21 @@
             <!-- оообливості -->
             <section class="section">
                 <div class="container">
-                    <h2 class="section-title">Особливості</h2>
+                    <h2 class="section-title hide">Особливості</h2>
                     <ul class="features list">
-                        <li>
+                        <li class="features-item">
                             <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
                             <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                         </li>
-                        <li>
+                        <li class="features-item">
                             <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
                             <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                         </li>
-                        <li>
+                        <li class="features-item">
                             <h3 class="title">ПЛАНУВАННЯ</h3>
                             <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
                         </li>
-                        <li>
+                        <li class="features-item">
                             <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                             <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                         </li>
@@ -68,7 +67,7 @@
             <section class="section">
                 <div class="container">
                     <h2 class="section-title">Чим ми займаємося</h2>
-                    <ul class="list">
+                    <ul class="list about">
                         <li>
                             <img src="./images/photo1.jpeg" alt="верстання вебсторінки" width="370">
                         </li>
@@ -87,25 +86,33 @@
                 <div class="container">
                     <h2 class="section-title">Наша команда</h2>
                     <ul class="team list">
-                        <li>
+                        <li class="team-card">
                             <img src="./images/photo4.jpeg" alt="член команди - Ігор" width="270">
-                            <h3 class="title">Ігор Дем'яненко</h3>
-                            <p class="text">Product Designer</p>
+                            <div class="team-info">
+                                <h3 class="title">Ігор Дем'яненко</h3>
+                                <p class="text">Product Designer</p>
+                            </div>
                         </li>
-                        <li>
+                        <li class="team-card">
                             <img src="./images/photo5.jpeg" alt="член команди - Ольга" width="270">
-                            <h3 class="title">Ольга Рєпіна</h3>
-                            <p class="text">Frontend Developer</p>
+                            <div class="team-info">
+                                <h3 class="title">Ольга Рєпіна</h3>
+                                <p class="text">Frontend Developer</p>
+                            </div>
                         </li>
-                        <li>
+                        <li class="team-card">
                             <img src="./images/photo6.jpeg" alt="член команди - Микола" width="270">
-                            <h3 class="title">Микола Тарасов</h3>
-                            <p class="text">Marketing</p>
+                            <div class="team-info">
+                                <h3 class="title">Микола Тарасов</h3>
+                                <p class="text">Marketing</p>
+                            </div>
                         </li>
-                        <li>
+                        <li class="team-card">
                             <img src="./images/photo7.jpeg" alt="член команди - Михайло" width="270">
-                            <h3 class="title">Михайло Єрмаков</h3>
-                            <p class="text">UI Designer</p>
+                            <div class="team-info">
+                                <h3 class="title">Михайло Єрмаков</h3>
+                                <p class="text">UI Designer</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -113,15 +120,17 @@
     </main>
 
     <footer class="footer">
-        <a href="./index.html" class="logo">Web<span class="footer-logo">Studio</span></a>
-
-        <address>
-            <ul class="contact-footer list">
-                <li><a href="https://www.google.com/maps/place/Lesi+Ukrainky+Blvd,+26,+Kyiv,+Ukraine,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858" target="_blank" rel="noopener noreferrer" class="link address">м. Київ, пр-т Лесі Українки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="link">+380961111111</a></li>
-            </ul>
-        </address>
+        <div class="container bottom">
+            <a href="./index.html" class="second-logo">Web<span class="footer-logo">Studio</span></a>
+            <address>
+                <ul class="contact-footer list">
+                    <li class="footer-li"><a href="https://www.google.com/maps/place/Lesi+Ukrainky+Blvd,+26,+Kyiv,+Ukraine,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+                            target="_blank" rel="noopener noreferrer" class="link address">м. Київ, пр-т Лесі Українки, 26</a></li>
+                    <li class="footer-li"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                    <li class="footer-li"><a href="tel:+380961111111" class="link">+380961111111</a></li>
+                </ul>
+            </address>
+        </div>
 
     </footer>
 </body>
