Додає оновлені файли html+css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!-- верхня лінія -->
-    <header>
+    <header class="header">
         <div class="container header-nav">
             <nav class="main-nav">
                 <a class="logo" href="./index.html">Web<span class="partlogo">Studio</span></a>
