--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!-- верхня лінія -->
-    <header>
+    <header class="header">
         <div class="container header-nav">
             <nav class="main-nav">
                 <a class="logo" href="./index.html">Web<span class="partlogo">Studio</span></a>
@@ -55,65 +55,83 @@
                 <ul class="list-portfolio">
                     <li class="element">
                         <a href="" class="link">
-                            <img src="./images/photo8.jpeg" alt="ноутбук з веб-сайтом на екрані" width="370">
-                            <h2 class="title">Технокряк</h2>
-                            <p class="text">Веб-сайт</p>
+                            <img class="image" src="./images/photo8.jpeg" alt="ноутбук з веб-сайтом на екрані" width="370">
+                            <div class="filters-info">
+                                <h2 class="title">Технокряк</h2>
+                                <p class="text">Веб-сайт</p>
+                            </div>
                         </a>
                     </li>
                     <li class="element">
                         <a href="" class="link">
-                            <img src="./images/photo9.jpeg" alt="гра в волейбол" width="370">
-                            <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                            <p class="text">Дизайн</p>
+                            <img class="image" src="./images/photo9.jpeg" alt="гра в волейбол" width="370">
+                            <div class="filters-info">
+                                <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                                <p class="text">Дизайн</p>
+                            </div>
                         </a>
                     </li>
                     <li class="element">
                         <a href="" class="link">
-                            <img src="./images/photo10.jpeg" alt="логотип ресторану" width="370">
-                            <h2 class="title">Ресторан Seafood</h2>
-                            <p class="text">Додаток</p>
+                            <img class="image" src="./images/photo10.jpeg" alt="логотип ресторану" width="370">
+                            <div class="filters-info">
+                                <h2 class="title">Ресторан Seafood</h2>
+                                <p class="text">Додаток</p>
+                            </div>
                         </a>
                     </li>
                     <li class="element">
                         <a href="" class="link">
-                            <img src="./images/photo11.jpeg" alt="навушники" width="370">
-                            <h2 class="title">Проєкт Prime</h2>
-                            <p class="text">Маркетинг</p>
+                            <img class="image" src="./images/photo11.jpeg" alt="навушники" width="370">
+                            <div class="filters-info">
+                                <h2 class="title">Проєкт Prime</h2>
+                                <p class="text">Маркетинг</p>
+                            </div>
                         </a>
                     </li>
                     <li class="element">
                         <a href="" class="link">
-                            <img src="./images/photo12.jpeg" alt="коробки" width="370">
-                            <h2 class="title">Проєкт Boxes</h2>
-                            <p class="text">Додаток</p>
+                            <img class="image" src="./images/photo12.jpeg" alt="коробки" width="370">
+                            <div class="filters-info">
+                                <h2 class="title">Проєкт Boxes</h2>
+                                <p class="text">Додаток</p>
+                            </div>
                         </a>
                     </li>
                     <li class="element">
                         <a href="" class="link">
-                            <img src="./images/photo13.jpeg" alt="монітор із веб-сайтом на екрані" width="370">
-                            <h2 class="title">Inspiration has no Borders</h2>
-                            <p class="text">Веб-сайт</p>
+                            <img class="image" src="./images/photo13.jpeg" alt="монітор із веб-сайтом на екрані" width="370">
+                            <div class="filters-info">
+                                <h2 class="title">Inspiration has no Borders</h2>
+                                <p class="text">Веб-сайт</p>
+                            </div>
                         </a>
                     </li>
                     <li class="element">
                         <a href="" class="link">
-                            <img src="./images/photo14.jpeg" alt="журнал" width="370">
-                            <h2 class="title">Видання Limited Edition</h2>
-                            <p class="text">Дизайн</p>
+                            <img class="image" src="./images/photo14.jpeg" alt="журнал" width="370">
+                            <div class="filters-info">
+                                <h2 class="title">Видання Limited Edition</h2>
+                                <p class="text">Дизайн</p>
+                            </div>
                         </a>
                     </li>
                     <li class="element">
                         <a href="" class="link">
-                            <img src="./images/photo15.jpeg" alt="листівка" width="370">
-                            <h2 class="title">Проєкт LAB</h2>
-                            <p class="text">Маркетинг</p>
+                            <img class="image" src="./images/photo15.jpeg" alt="листівка" width="370">
+                            <div class="filters-info">
+                                <h2 class="title">Проєкт LAB</h2>
+                                <p class="text">Маркетинг</p>
+                            </div>
                         </a>
                     </li>
                     <li class="element">
                         <a href="" class="link">
-                            <img src="./images/photo16.jpeg" alt="ноутбук з додатком на екрані" width="370">
-                            <h2 class="title">Growing Business</h2>
-                            <p class="text">Додаток</p>
+                            <img class="image" src="./images/photo16.jpeg" alt="ноутбук з додатком на екрані" width="370">
+                            <div class="filters-info">
+                                <h2 class="title">Growing Business</h2>
+                                <p class="text">Додаток</p>
+                            </div>
                         </a>
                     </li>
                 </ul>
