Додає оновлений файл html і css

--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
                 <div class="container">
                     <h2 class="section-title">Чим ми займаємося</h2>
                     <ul class="list about">
-                        <li>
-                            <img src="./images/photo1.jpeg" alt="верстання вебсторінки" width="370">
+                        <li class="describe">
+                            <img class="image" src="./images/photo1.jpeg" alt="верстання вебсторінки" width="370">
                         </li>
-                        <li>
-                            <img src="./images/photo2.jpeg" alt="створення дизайну сайта" width="370">
+                        <li class="describe">
+                            <img class="image" src="./images/photo2.jpeg" alt="створення дизайну сайта" width="370">
                         </li>
-                        <li>
-                            <img src="./images/photo3.jpeg" alt="створення графіки" width="370">
+                        <li class="describe">
+                            <img class="image" src="./images/photo3.jpeg" alt="створення графіки" width="370">
                         </li>
                     </ul>
                 </div>
