Додає оновлений файл html+css

--- a/index.html
+++ b/index.html
@@ -34,15 +34,17 @@
     <main>
             <!-- герой  -->
             <section class="hero">
-                <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-                <button type="button" class="button primary">Замовити послугу</button>
+                <div class="container">
+                    <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+                    <button type="button" class="button primary">Замовити послугу</button>
+                </div>
             </section>
             
             <!-- оообливості -->
-            <section class="section">
+            <section class="section features">
                 <div class="container">
                     <h2 class="section-title hide">Особливості</h2>
-                    <ul class="features list">
+                    <ul class="features-list list">
                         <li class="features-item">
                             <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
                             <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
@@ -82,10 +84,10 @@
             </section>
             
             <!-- наша команда -->
-            <section class="section no-margin">
+            <section class="section team">
                 <div class="container">
                     <h2 class="section-title">Наша команда</h2>
-                    <ul class="team list">
+                    <ul class="team-list list">
                         <li class="team-card">
                             <img src="./images/photo4.jpeg" alt="член команди - Ігор" width="270">
                             <div class="team-info">
