--- a/portfolio.html
+++ b/portfolio.html
@@ -32,9 +32,9 @@
     </header>
 
     <main>
-        <section class="filters">
+        <section class="filters section">
             <div class="container">
-                <ul class="list-filter">
+                <ul class="list-filter list">
                     <li class="filter-li">
                         <button class="button different" type="button">Усі</button>
                     </li>
@@ -52,7 +52,7 @@
                     </li>
                 </ul>
                 
-                <ul class="list-portfolio">
+                <ul class="list-portfolio list">
                     <li class="element">
                         <a href="" class="link">
                             <img class="image" src="./images/photo8.jpeg" alt="ноутбук з веб-сайтом на екрані" width="370">
